k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wilcam
  labels:
    app.kubernetes.io/name: wilcam
    app.kubernetes.io/part-of: wilcam-platform
